# canary

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e68f756f6be4_initial_schema.py
backend/app/: main.py
backend/app/agents/: __init__.py  graph.py  schemas.py  sentiment.py  verification.py
backend/app/agents/sources/: __init__.py  base.py  bluesky.py  newsapi.py  reddit.py
backend/app/api/: topics.py
backend/app/core/: config.py  database.py  llm.py
backend/app/models/: __init__.py  sentiment_score.py  source_item.py  topic.py
backend/app/services/: analysis.py
canary/: manage.py
canary/canary/: settings.py  urls.py  wsgi.py
canary_app/: manage.py
canary_app/canary/: apps.py  handler.py  listener.py  models.py  processor.py  sentiment.py  streamer.py  urls.py  views.py
canary_app/canary/migrations/: 0001_initial.py  0002_auto_20170313_1728.py  0003_auto_20170313_2219.py  0004_auto_20170313_2223.py  0005_auto_20170313_2235.py  0006_auto_20170315_1513.py  0007_tweet_origin.py  0008_auto_20170317_1523.py
canary_app/canary/static/css/: main.css
canary_app/canary/static/js/: main.js  refresh.js  script.js
canary_app/canary_app/: settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ScoreIndicator.tsx  SentimentBar.tsx  SourceItemCard.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  types.ts
(+6 files in other folders)
